--- a/browser/base/content/newtab/newTab.css
+++ b/browser/base/content/newtab/newTab.css
@@ -58,23 +58,9 @@ input[type=button] {
   -moz-box-orient: vertical;
 }
 
-#newtab-margin-top {
-  min-height: 50px;
-  max-height: 80px;
-  -moz-box-flex: 1;
-  -moz-box-align: center;
-  -moz-box-pack: center;
-}
-
 #newtab-margin-undo-container {
   display: -moz-box;
   -moz-box-pack: center;
-}
-
-#newtab-margin-bottom {
-  min-height: 40px;
-  max-height: 100px;
-  -moz-box-flex: 1;
 }
 
 #newtab-horizontal-margin {
@@ -97,18 +83,15 @@ input[type=button] {
 }
 
 .newtab-side-margin {
-  min-width: 40px;
-  max-width: 300px;
+  min-width: 16px;
   -moz-box-flex: 1;
 }
 
 /* GRID */
 #newtab-grid {
-  display: -moz-box;
   -moz-box-flex: 5;
-  -moz-box-orient: vertical;
-  min-width: 600px;
-  min-height: 400px;
+  overflow: hidden;
+  text-align: center;
   transition: 100ms ease-out;
   transition-property: opacity;
 }
@@ -122,18 +105,12 @@ input[type=button] {
   pointer-events: none;
 }
 
-/* ROWS */
-.newtab-row {
-  display: -moz-box;
-  -moz-box-orient: horizontal;
-  -moz-box-direction: normal;
-  -moz-box-flex: 1;
-}
-
 /* CELLS */
 .newtab-cell {
   display: -moz-box;
-  -moz-box-flex: 1;
+  height: 150px;
+  margin: 16px;
+  width: 243px;
 }
 
 /* SITES */
@@ -177,10 +154,12 @@ input[type=button] {
 
 /* TITLES */
 .newtab-title {
+  bottom: -21px;
   position: absolute;
   left: 0;
+  line-height: 21px;
   right: 0;
-  bottom: 0;
+  text-align: start;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -276,7 +255,6 @@ input[type=button] {
 
 #newtab-search-form {
   display: -moz-box;
-  -moz-box-flex: 5;
   -moz-box-orient: horizontal;
   -moz-box-align: center;
   height: 44px; /* 32 + 6 logo top "padding" + 6 logo bottom "padding" */
