--- a/browser/components/places/content/places.xhtml
+++ b/browser/components/places/content/places.xhtml
@@ -18,6 +18,9 @@
 <!DOCTYPE window [
 <!ENTITY % editMenuOverlayDTD SYSTEM "chrome://global/locale/editMenuOverlay.dtd">
 %editMenuOverlayDTD;
+#ifdef XP_MACOSX
+#include ../../../base/content/browser-doctype.inc
+#endif
 ]>
 
 <window id="places"
