Bug 21952: Implement Onion-Location
Whenever a valid Onion-Location HTTP header (or corresponding HTML
<meta> http-equiv attribute) is found in a document load, we either
redirect to it (if the user opted-in via preference) or notify the
presence of an onionsite alternative with a badge in the urlbar.

--- a/browser/themes/shared/browser-shared.css
+++ b/browser/themes/shared/browser-shared.css
@@ -25,6 +25,7 @@
 @import url("chrome://browser/skin/browser-colors.css");
 @import url("chrome://branding/content/tor-styles.css");
 @import url("chrome://browser/skin/tor-urlbar-button.css");
+@import url("chrome://browser/skin/onionlocation.css");
 
 @namespace html url("http://www.w3.org/1999/xhtml");
 
