--- a/browser/themes/shared/urlbar-searchbar.inc.css
+++ b/browser/themes/shared/urlbar-searchbar.inc.css
@@ -904,3 +904,5 @@ moz-input-box > menupopup .context-menu-add-engine > .menu-iconic-left::after {
   opacity: 0.69;
 }
 } /*** END !proton ***/
+
+%include ../../components/onionservices/content/onionlocation-urlbar.css
