--- a/browser/themes/shared/browser-shared.css
+++ b/browser/themes/shared/browser-shared.css
@@ -23,6 +23,7 @@
 @import url("chrome://browser/skin/UITour.css");
 @import url("chrome://browser/skin/browser-colors.css");
 @import url("chrome://branding/content/tor-styles.css");
+@import url("chrome://browser/skin/tor-urlbar-button.css");
 
 @namespace html url("http://www.w3.org/1999/xhtml");
 
