--- a/browser/components/torconnect/content/torconnect-urlbar.css
+++ b/browser/components/torconnect/content/torconnect-urlbar.css
@@ -3,40 +3,32 @@
 */
 hbox.urlbar-page-action#torconnect-box {
     display: -moz-inline-box!important;
-    margin: 0 6px;
     height: 28px;
-}
-/* disable the button-like default css */
-hbox.urlbar-page-action#torconnect-box:hover,
-hbox.urlbar-page-action#torconnect-box:active {
-    background-color: inherit!important;
 }
 
 label#torconnect-label {
     line-height: 28px;
     margin: 0;
     opacity: 0.6;
+    padding: 0 0.5em;
 }
 
 /* set appropriate sizes for the non-standard ui densities */
-:root[uidensity=compact] {
-    hbox.urlbar-page-action#torconnect-box {
-        margin: 0 4px;
-        height: 24px;
-    }
-    label#torconnect-label {
-        line-height: 24px;
-    }
+:root[uidensity=compact] hbox.urlbar-page-action#torconnect-box {
+    height: 24px;
 }
-:root[uidensity=touch] {
-    hbox.urlbar-page-action#torconnect-box {
-        margin: 0 7px;
-        height: 30px;
-    }
-    label#torconnect-label {
-        line-height: 30px;
-    }
+:root[uidensity=compact] label#torconnect-label {
+    line-height: 24px;
 }
+
+
+:root[uidensity=touch] hbox.urlbar-page-action#torconnect-box {
+    height: 30px;
+}
+:root[uidensity=touch] label#torconnect-label {
+    line-height: 30px;
+}
+
 
 /* hide when hidden attribute is set */
 hbox.urlbar-page-action#torconnect-box[hidden="true"],
