--- a/browser/components/torpreferences/content/torPreferences.css
+++ b/browser/components/torpreferences/content/torPreferences.css
@@ -1,3 +1,5 @@
+@import url("chrome://branding/content/tor-styles.css");
+
 #category-tor > .category-icon {
   list-style-image: url("chrome://browser/content/torpreferences/torPreferencesIcon.svg");
 }
@@ -24,8 +26,8 @@
 }
 
 #torPreferences-connectMessageBox.warning {
-  background-color: var(--yellow-50);
-  color: var(--yellow-90);
+  background-color: var(--purple-50);
+  color: white;
 }
 
 #torPreferences-connectMessageBox table {
@@ -61,8 +63,8 @@
 
 #torPreferences-connectMessageBox.warning #torPreferences-connectMessageBox-icon
 {
-  mask: url("chrome://global/skin/icons/warning.svg");
-  background-color: black;
+  mask: url("chrome://browser/skin/onion.svg");
+  background-color: white;
 }
 
 #torPreferences-connectMessageBox-message {
@@ -108,16 +110,16 @@
 }
 
 #torPreferences-connectMessageBox.warning #torPreferences-connectMessageBox-button {
-  background-color: var(--yellow-60);
+  background-color: var(--purple-70);
 }
 
 #torPreferences-connectMessageBox.warning #torPreferences-connectMessageBox-button:hover {
-  background-color: var(--yellow-70);
+  background-color: var(--purple-80);
   color: white!important;
 }
 
 #torPreferences-connectMessageBox.warning #torPreferences-connectMessageBox-button:active {
-  background-color: var(--yellow-80);
+  background-color: var(--purple-90);
   color: white!important;
 }
 
