Bug 40701: Add security warning when downloading a file
Shown in the downloads panel, about:downloads and places.xhtml.

--- a/browser/components/places/content/places.css
+++ b/browser/components/places/content/places.css
@@ -126,3 +126,7 @@ tree[is="places-tree"] > treechildren::-moz-tree-cell {
   margin: 2px 4px;
   color: currentColor;
 }
+
+#placesDownloadsTorWarning:not(.downloads-visible) {
+  display: none;
+}
