--- a/browser/themes/shared/downloads/contentAreaDownloadsView.css
+++ b/browser/themes/shared/downloads/contentAreaDownloadsView.css
@@ -25,3 +25,7 @@
   text-align: center;
   color: var(--in-content-deemphasized-text);
 }
+
+#aboutDownloadsTorWarning {
+  margin-block-end: 8px;
+}
