--- a/browser/components/preferences/preferences.xhtml
+++ b/browser/components/preferences/preferences.xhtml
@@ -16,10 +16,7 @@
 <?xml-stylesheet href="chrome://browser/content/torpreferences/torPreferences.css"?>
 <?xml-stylesheet href="chrome://browser/content/onionservices/authPreferences.css"?>
 
-<!DOCTYPE html [
-<!ENTITY % aboutTorDTD SYSTEM "chrome://torbutton/locale/aboutTor.dtd">
-  %aboutTorDTD;
-]>
+<!DOCTYPE html>
 
 <html xmlns="http://www.w3.org/1999/xhtml"
         xmlns:html="http://www.w3.org/1999/xhtml"
