fixup! Bug 31286: Implementation of bridge, proxy, and firewall settings in about:preferences#connection
Bug 41977: Hide the 'Learn more' link in bridge cards

--- a/browser/components/torpreferences/content/connectionPane.xhtml
+++ b/browser/components/torpreferences/content/connectionPane.xhtml
@@ -157,7 +157,8 @@
             readonly="readonly"
           />
         </hbox>
-        <hbox class="torPreferences-bridgeCard-learnMoreBox" align="center">
+        <!-- tor-browser#41977 disable this learn more link until we have an alternate manual entry -->
+        <hbox class="torPreferences-bridgeCard-learnMoreBox" align="center" hidden="true">
           <label
             class="torPreferences-bridgeCard-learnMore learnMore text-link stop-click"
             is="text-link"
