fixup! Bug 41600: Add a tor circuit display panel.
Bug 42045: Allow circuit panel to grow in width for long addresses.

--- a/browser/components/torcircuit/content/torCircuitPanel.css
+++ b/browser/components/torcircuit/content/torCircuitPanel.css
@@ -69,16 +69,15 @@
 }
 
 #tor-circuit-panel-body {
-  /* xul:vbox with display: block will be correctly measured in size by the
-   * parent xul:panel, and allocated the required space. */
-  display: block;
   /* May grow larger than 480px if we have a long domain name or ip address. */
-  width: 480px;
+  min-width: 480px;
+  padding: 1em;
+  gap: 1em;
 }
 
 #tor-circuit-node-list-name,
 #tor-circuit-node-list {
-  margin: 1em;
+  margin: 0;
 }
 
 #tor-circuit-node-list {
