fixup! Bug 31286: Implementation of bridge, proxy, and firewall settings in about:preferences#connection
Bug 42047: Remove sizing hacks for tor dialogs. We can just wait until
DOMContentLoaded to call _populateXUL. Then the subDialog code will take
care of the sizing for us.

--- a/browser/components/torpreferences/content/bridgeQrDialog.xhtml
+++ b/browser/components/torpreferences/content/bridgeQrDialog.xhtml
@@ -21,8 +21,10 @@
           "use strict";
 
           let dialogObject = window.arguments[0];
-          let dialogElement = document.getElementById("bridgeQr-dialog");
-          dialogObject.init(window, dialogElement);
+          document.addEventListener("DOMContentLoaded", () => {
+            let dialogElement = document.getElementById("bridgeQr-dialog");
+            dialogObject.init(window, dialogElement);
+          });
         ]]>
     </script>
   </dialog>
