--- a/browser/components/torpreferences/content/requestBridgeDialog.xhtml
+++ b/browser/components/torpreferences/content/requestBridgeDialog.xhtml
@@ -35,8 +35,10 @@
           "use strict";
 
           let requestBridgeDialog = window.arguments[0];
-          let dialog = document.getElementById("torPreferences-requestBridge-dialog");
-          requestBridgeDialog.init(window, dialog);
+          document.addEventListener("DOMContentLoaded", () => {
+            let dialog = document.getElementById("torPreferences-requestBridge-dialog");
+            requestBridgeDialog.init(window, dialog);
+          });
         ]]>
     </script>
   </dialog>
