fixup! Bug 31286: Implementation of bridge, proxy, and firewall settings in about:preferences#connection
Bug 41651: Use moz-toggle for enable-bridges switch.

--- a/browser/components/torpreferences/content/connectionPane.xhtml
+++ b/browser/components/torpreferences/content/connectionPane.xhtml
@@ -108,16 +108,10 @@
       <html:span id="torPreferences-currentBridges-descriptionText" />
     </description>
     <hbox align="center">
-      <html:input
-        type="checkbox"
+      <html:moz-toggle
         id="torPreferences-currentBridges-switch"
-        class="toggle-button"
+        label-align-after=""
       />
-      <html:label
-        id="torPreferences-currentBridges-enableAll-label"
-        for="torPreferences-currentBridges-switch"
-      >
-      </html:label>
       <spacer flex="1" />
       <button id="torPreferences-currentBridges-removeAll" />
     </hbox>
