fixup! Bug 7494: Create local home page for TBB.
Bug 42075: Increase inline margin for the message links in about:tor.

Also increase the end margin of the emoji icon.

--- a/browser/components/abouttor/content/aboutTor.css
+++ b/browser/components/abouttor/content/aboutTor.css
@@ -56,6 +56,12 @@ h1 {
 .message-emoji {
   height: 1em;
   vertical-align: sub;
+  margin-inline-end: 0.3em;
+}
+
+.home-message a {
+  /* Increase gap between the link and the rest of the text. */
+  margin-inline: 0.4em;
 }
 
 #search-form {
