--- a/browser/components/onionservices/content/authPreferences.css
+++ b/browser/components/onionservices/content/authPreferences.css
@@ -3,7 +3,11 @@
 @import url("chrome://browser/skin/browser-colors.css");
 
 #torOnionServiceKeys-overview-container {
-  margin-right: 30px;
+  margin-inline-end: 30px;
+}
+
+#onionservices-savedkeys-dialog {
+  min-width: 45em;
 }
 
 #onionservices-savedkeys-tree treechildren::-moz-tree-cell-text {
@@ -11,14 +15,17 @@
 }
 
 #onionservices-savedkeys-errorContainer {
-  margin-top: 4px;
+  margin-block-start: 4px;
   min-height: 3em;
 }
 
+#onionservices-savedkeys-errorContainer:not(.show-error) {
+  visibility: hidden;
+}
+
 #onionservices-savedkeys-errorIcon {
-  margin-right: 4px;
+  margin-inline-end: 4px;
   list-style-image: url("chrome://global/skin/icons/warning.svg");
   -moz-context-properties: fill;
   fill: var(--warning-color);
-  visibility: hidden;
 }
