fixup! Bug 2176: Rebrand Firefox to TorBrowser
Bug 41639: Update the wordmark of the about dialog.

--- a/browser/base/content/aboutDialogTor.css
+++ b/browser/base/content/aboutDialogTor.css
@@ -5,8 +5,8 @@
 }
 
 #rightBox {
-  background-image: url('chrome://global/skin/illustrations/about-wordmark.png');
-  background-position: left top;
+  background-size: auto;
+  padding-top: 32px;
 }
 
 #contributeDesc {
